[package]
name = "just-a-blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "just-a-blog"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
